--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.patos.alens</groupId>
-	<artifactId>demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<groupId>com.ehpatho</groupId>
+	<artifactId>api</artifactId>
+	<version>1.0.0</version>
+	<name>ehpatho</name>
+	<description>API em Springboot do sistema EhPato</description>
 	<url/>
 	<licenses>
 		<license/>
