--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
-api.ia.url=http://0.0.0.0:8000/verificarElemento
+api.ia.url=https://eh-pato-ia-api.onrender.com/verificarElemento
